[gd_scene load_steps=3 format=3 uid="uid://extj22e0iku"]

[ext_resource type="Theme" uid="uid://sabiea1hheuf" path="res://themes/rpg.tres" id="1_1ribv"]
[ext_resource type="Script" path="res://scripts/pause_screen.gd" id="1_2rpka"]

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 3
layer = 30
script = ExtResource("1_2rpka")

[node name="TextureRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.215686, 0.215686, 0.215686, 0.517647)

[node name="PausePanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -552.0
offset_top = -358.0
offset_right = 552.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1ribv")

[node name="Container" type="VBoxContainer" parent="PausePanel"]
layout_mode = 2
theme_override_constants/separation = 34
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PausePanel/Container"]
layout_mode = 2
theme_override_constants/margin_bottom = 38

[node name="Label" type="Label" parent="PausePanel/Container/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.737255)
theme_override_font_sizes/font_size = 102
text = "Pause"
horizontal_alignment = 1

[node name="ResumeBtn" type="Button" parent="PausePanel/Container"]
custom_minimum_size = Vector2(532, 75)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 53
text = "Lanjut"

[node name="RetryBtn" type="Button" parent="PausePanel/Container"]
custom_minimum_size = Vector2(532, 75)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 53
text = "Ulang"

[node name="MainMenu" type="Button" parent="PausePanel/Container"]
custom_minimum_size = Vector2(532, 75)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_font_sizes/font_size = 53
text = "Halaman Awal"

[connection signal="pressed" from="PausePanel/Container/ResumeBtn" to="." method="resume_game"]
[connection signal="pressed" from="PausePanel/Container/RetryBtn" to="." method="retry"]
[connection signal="pressed" from="PausePanel/Container/MainMenu" to="." method="main_menu"]
